--- a/generate_distribution.html
+++ b/generate_distribution.html
@@ -5,6 +5,7 @@ sub tmp_cloud {
   my $filters = shift;
   my $species = shift;
   my $slipsites = shift;
+  my $algorithms = shift;
   my $seqlength = shift;
   my $cloud = new PRFGraph(config=>$config);
   my $suffix;
@@ -22,13 +23,30 @@ sub tmp_cloud {
   } else {
    $suffix .= "-${slipsites}";
   }
-  $suffix .= "-${seqlength}";
-  my $cloud_output_filename = $cloud->Picture_Filename(type => 'cloud', species => $species, suffix => $suffix,);
-  my $cloud_url = $cloud->Picture_Filename(type => 'cloud', species => $species, url => 'url', suffix => $suffix,);
+  $suffix .= "-${algorithms}-${seqlength}";
+  my $cloud_output_filename = $cloud->Picture_Filename(type => 'cloud', species => $species, algorithms => $algorithms, suffix => $suffix,);
+  my $cloud_url = $cloud->Picture_Filename(type => 'cloud', species => $species, url => 'url', algorithms => $algorithms, suffix => $suffix,);
   my $boot_table = "boot_$species";
   my $mt = "mfe_$species";
   my $points_stmt = qq"SELECT SQL_BUFFER_RESULT $mt.mfe, $boot_table.zscore, $mt.accession, $mt.knotp, $mt.slipsite, $mt.start, genome.genename FROM $mt, $boot_table, genome WHERE $boot_table.zscore IS NOT NULL AND $mt.mfe > -80 AND $mt.mfe < 5 AND $boot_table.zscore > -10 AND $boot_table.zscore < 10 AND $mt.seqlength = $seqlength AND $mt.id = $boot_table.mfe_id AND ";
   my $averages_stmt = qq"SELECT SQL_BUFFER_RESULT avg($mt.mfe), avg($boot_table.zscore), stddev($mt.mfe), stddev($boot_table.zscore) FROM $mt, $boot_table WHERE $boot_table.zscore IS NOT NULL AND $mt.mfe > -80 AND $mt.mfe < 5 AND $boot_table.zscore > -10 AND $boot_table.zscore < 10 AND $mt.seqlength = $seqlength AND $mt.id = $boot_table.mfe_id AND ";
+
+  if ($algorithms ne 'all') {
+    if ($algorithms eq 'nupack+hotknots') {
+        $points_stmt .= "( $mt.algorithm = 'nupack' OR $mt.algorithm = 'hotknots' ) AND ";
+	$averages_stmt .= "( $mt.algorithm = 'nupack' OR $mt.algorithm = 'hotknots' ) AND ";
+    } elsif ($algorithms eq 'nupack') {
+        $points_stmt .= "$mt.algorithm = 'nupack' AND ";
+	$averages_stmt .= "$mt.algorithm = 'nupack' AND ";
+    } elsif ($algorithms eq 'pknots') {
+        $points_stmt .= "$mt.algorithm = 'pknots' AND ";
+	$averages_stmt .= "$mt.algorithm = 'pknots' AND ";
+    } elsif ($algorithms eq 'hotknots') {
+        $points_stmt .= "$mt.algorithm = 'hotknots' AND ";
+	$averages_stmt .= "$mt.algorithm = 'hotknots' AND ";
+    }
+  }
+
   foreach my $filter (@${filters}) {
    if ($filter eq 'pseudoknots only') {
     $points_stmt .= "$mt.knotp = '1' AND ";
@@ -48,6 +66,7 @@ sub tmp_cloud {
 	seqlength => $seqlength,
 	species => $species,
 	points => $points,
+	algorithms => $algorithms,
 	averages => $averages,
 	filename => $cloud_output_filename,
 	url => $ENV{PRFDB_HOME},
@@ -60,6 +79,7 @@ sub tmp_cloud {
 	species => $species,
 	points => $points,
 	averages => $averages,
+	algorithms => $algorithms,
 	filename => $cloud_output_filename,
 	url => $ENV{PRFDB_HOME},
 	slipsites => $slipsites,
@@ -68,12 +88,13 @@ sub tmp_cloud {
     my $cloud_data = $cloud->Make_Cloud(%args);
 }
   use Proc::Forkfunc;
-  my @child_args = ($config, $filters, $species, $slipsites, $seqlength);
+  my @child_args = ($config, $filters, $species, $slipsites, $algorithms, $seqlength);
   forkfunc(\&tmp_cloud,@child_args);
 </%perl>
 
 <%args>
   $species => "saccharomyces_cerevisiae"
+  $algorithms => "all"
   $seqlength => 100
   $slipsites => "all"
   $filters => undef
