--- a/single_detail.html
+++ b/single_detail.html
@@ -208,7 +208,8 @@
 <a href="/download_png.html?accession=<% $information->{accession} %>&format=pdf&mfeid=<% $information->{id} %>&species=<% $information->{species} %>">pdf,</a>
 <a href="/download_png.html?accession=<% $information->{accession} %>&format=ps&mfeid=<% $information->{id} %>&species=<% $information->{species} %>">ps</a>, View
 <a href="/cfeynman.html?accession=<% $information->{accession} %>&mfeid=<% $information->{id} %>&species=<% $information->{species} %>">cfeynman graph</a>, Try
-<a href="/feynman_overlap.html?start=<% $information->{slipstart} %>&seqlength=<% $information->{seqlength} %>&accession=<% $information->{accession} %>">An overlap</a>
+<a href="/feynman_overlap.html?start=<% $information->{slipstart} %>&seqlength=<% $information->{seqlength} %>&accession=<% $information->{accession} %>">An overlap</a> or
+<a href="/micro.html?species=<% $information->{species} %>&accession=<% $information->{accession} %>&start=<% $information->{slipstart} %>">micro</a>
 
 <br>
 	  </font>
