new graph of PRF signal vs. percent ORF

--- a/graphs.html
+++ b/graphs.html
@@ -34,11 +34,13 @@ Generating new extensions now.
 % $pic->Make_Extension($species, "$ENV{PRFDB_HOME}/images/cloud/$species/extension-codons.png", 'codons', $ENV{PRFDB_HOME});
 % } 
  <img src="images/cloud/<% $species %>/extension-percent.png" usemap="#percent_extension">
+ <img src="images/cloud/<% $species %>/extension-percent_orf.png">
 </center>
 Below is the same with the number of codons on the y axis.
 </p>
 <center>
   <img src="images/cloud/<% $species %>/extension-codons.png" usemap="#codons_extension">
+  <img src="images/cloud/<% $species %>/extension-codons_extension.png">
 </center>
 
 %## Dump the percent map to STDOUT
