--- a/download.html
+++ b/download.html
@@ -34,7 +34,7 @@
   </tr>
 </table>
 
-<form method="post" action="http://prfdb.umd.edu/index.cgi/choose_download" enctype="application/x-www-form-urlencoded">
+<form method="post" action="http://prfdb.umd.edu/download.html" enctype="application/x-www-form-urlencoded">
 <p>
 Download the entire table for the species of your choice:<br>
 <!---  <& species_selector.html, select_name => "species" &>   --->
