fixing some help text and the reload() header

--- a/distribution.html
+++ b/distribution.html
@@ -38,11 +38,11 @@
 
 </center>
 <br>
-The x axis displays the range of putative <a href="help_detail#help_mfe">
+The x axis displays the range of putative <a href="help/detail.html#mfe">
 minimum free energy</a> values computed for all <i></i>
  sequences of length 100.<br>
 
-The y axis displays the range of <a href="help_detail#help_z">
+The y axis displays the range of <a href="help/detail.html#z">
 z scores</a> for these same sequences.<br>
 Each dot thus represents a single (mfe, z score) in relation to all
 the others for <i></i>.  
