--- a/help/detail.html
+++ b/help/detail.html
@@ -14,20 +14,20 @@
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
 
-	    <div align="right"><a href="#help_species"><strong>Species: </strong></a></div>
+	    <div align="right"><a href="#species"><strong>Species: </strong></a></div>
 	    </td>
 	<td>
 	  <i>
 	    Saccharomyces cerevisiae</i>
 	  </td>
 	<td width="40%" rowspan="12" valign="top">
-	    <div align="left"><a href="#help_graph"><img src="/html/SGDID:S0004310-1995-443821.png" border="2"></a></div>
+	    <div align="left"><a href="#graph"><img src="/html/SGDID:S0004310-1995-443821.png" border="2"></a></div>
 	    </td>
       </tr>
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	    <a href="#help_accession"><div align="right"><strong>Accession: </strong></div></a>
+	    <a href="#accession"><div align="right"><strong>Accession: </strong></div></a>
 	    </td>
 	<td>
 	    <a href="/browse?accession=SGDID:S0004310">SGDID:S0004310</a>
@@ -36,7 +36,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <a href="#help_position"><div align="right"><strong>Position: </strong></div></a>
+	  <a href="#position"><div align="right"><strong>Position: </strong></div></a>
 	    </td>
 	<td>
 	  1995</td>
@@ -45,7 +45,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <a href="#help_algorithm"><div align="right"><strong>Algorithm: </strong></div></a>
+	  <a href="#algorithm"><div align="right"><strong>Algorithm: </strong></div></a>
 	    </td>
 	<td>
 	  pknots</td>
@@ -54,7 +54,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <a href="#help_bacode"><div align="right"><strong>Barcode: </strong></div><a/>
+	  <a href="#bacode"><div align="right"><strong>Barcode: </strong></div><a/>
 	    </td>
 	<td>
 	  112233</td>
@@ -63,7 +63,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <a href="#help_seqlength"><div align="right"><strong>Sequence Length: </strong></div></a>
+	  <a href="#seqlength"><div align="right"><strong>Sequence Length: </strong></div></a>
 	    </td>
 	<td>
 	  100</td>
@@ -72,7 +72,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <a href="#help_slipsite"><div align="right"><strong>Slippery Site: </strong></div></a>
+	  <a href="#slipsite"><div align="right"><strong>Slippery Site: </strong></div></a>
 	    </td>
 	<td>
 	  UUUAAAA</td>
@@ -82,7 +82,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <a href="#help_bp"><div align="right"><strong>Base Pairs: </strong></div></a>
+	  <a href="#bp"><div align="right"><strong>Base Pairs: </strong></div></a>
 	    </td>
 	<td>
 	  21</td>
@@ -91,7 +91,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <a href="#help_mfe"><div align="right"><strong>MFE: </strong></div></a>
+	  <a href="#mfe"><div align="right"><strong>MFE: </strong></div></a>
 	    </td>
 	<td>
 	    -16.3 kcal/mol
@@ -101,7 +101,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <a href="#help_z"><div align="right"><strong>Z Score: </strong></div></a>
+	  <a href="#z"><div align="right"><strong>Z Score: </strong></div></a>
 	    </td>
 	<td>
 	  -0.73  </td>
@@ -110,7 +110,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <a href="#help_rand_mfe"><div align="right"><strong>Randomized Mean MFE: </strong></div></a>
+	  <a href="#rand_mfe"><div align="right"><strong>Randomized Mean MFE: </strong></div></a>
 	    </td>
 	<td>
 	    -13.9 &plusmn; 0.3 kcal/mol
@@ -120,7 +120,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <a href="#help_ppcc"><div align="right"><strong>PPCC: </strong></div></a>
+	  <a href="#ppcc"><div align="right"><strong>PPCC: </strong></div></a>
 	    </td>
 	<td>
 	  0.9632</td>
@@ -141,7 +141,7 @@
       </tr>
 
       <tr>
-        <td width="10%"><a href="#help_seq">Sequence</a></td>
+        <td width="10%"><a href="#seq">Sequence</a></td>
 	<td>
     <font face="Courier New, Courier, mono"
     size="-1">C<font color="blue">U</font><font color="blue">G</font><font color="blue">G</font><font color="blue">C</font><font color="blue">U</font><font color="blue">G</font>ACGAUUUCCUUAUAAUAUCAA<font color="blue">C</font><font color="blue">A</font><font color="blue">G</font>A<font color="blue">C</font><font color="blue">C</font><font color="blue">A</font>A<font color="red">C</font><font color="red">A</font><font color="red">G</font><font color="red">C</font><font color="red">A</font><font color="red">A</font><font color="red">G</font><font color="red">U</font>GAUCAAUAUCAAAAA<font color="red">G</font><font color="red">C</font><font color="red">U</font><font color="red">U</font><font color="red">G</font><font color="red">C</font>CA<font color="red">U</font><font color="red">G</font><font color="green">G</font><font color="green">G</font><font color="green">C</font>GGA<font color="green">U</font><font color="green">U</font><font color="green">U</font><font color="green">C</font>AAAAAUAUAAUGC<font color="green">G</font><font color="green">A</font><font color="green">A</font><font color="green">A</font><font color="green">G</font><font color="green">C</font><font color="green">C</font>A</font>
@@ -154,7 +154,7 @@
       </tr>
 
       <tr>
-        <td width="10%"><a href="#help_parens">Parens</a></td>
+        <td width="10%"><a href="#parens">Parens</a></td>
 	<td>
 	    <font face="Courier New, Courier, mono"
 	    size="-1">.<font color="blue">(</font><font color="blue">(</font><font color="blue">(</font><font color="blue">(</font><font color="blue">(</font><font color="blue">(</font>.....................<font color="blue">)</font><font color="blue">)</font><font color="blue">)</font>.<font color="blue">)</font><font color="blue">)</font><font color="blue">)</font>.<font color="red">(</font><font color="red">(</font><font color="red">(</font><font color="red">(</font><font color="red">(</font><font color="red">(</font><font color="red">(</font><font color="red">(</font>...............<font color="red">)</font><font color="red">)</font><font color="red">)</font><font color="red">)</font><font color="red">)</font><font color="red">)</font>..<font color="red">)</font><font color="red">)</font><font color="green">(</font><font color="green">(</font><font color="green">(</font>...<font color="green">(</font><font color="green">(</font><font color="green">(</font><font color="green">(</font>.............<font color="green">)</font><font color="green">)</font><font color="green">)</font><font color="green">)</font><font color="green">)</font><font color="green">)</font><font color="green">)</font>.</font>
@@ -167,7 +167,7 @@
       </tr>
 
       <tr>
-        <td width="10%"><a href="#help_parsed">Parsed</a></td>
+        <td width="10%"><a href="#parsed">Parsed</a></td>
        <td>
 	   <font face="Courier New, Courier, mono"
 	   size="-1">.<font color="blue">1</font><font color="blue">1</font><font color="blue">1</font><font color="blue">1</font><font color="blue">1</font><font color="blue">1</font>.....................<font color="blue">1</font><font color="blue">1</font><font color="blue">1</font>.<font color="blue">1</font><font color="blue">1</font><font color="blue">1</font>.<font color="red">2</font><font color="red">2</font><font color="red">2</font><font color="red">2</font><font color="red">2</font><font color="red">2</font><font color="red">2</font><font color="red">2</font>...............<font color="red">2</font><font color="red">2</font><font color="red">2</font><font color="red">2</font><font color="red">2</font><font color="red">2</font>..<font color="red">2</font><font color="red">2</font><font color="green">3</font><font color="green">3</font><font color="green">3</font>...<font color="green">3</font><font color="green">3</font><font color="green">3</font><font color="green">3</font>.............<font color="green">3</font><font color="green">3</font><font color="green">3</font><font color="green">3</font><font color="green">3</font><font color="green">3</font><font color="green">3</font>.</font>
@@ -180,7 +180,7 @@
       </tr>
 
       <tr>
-	<td width="10%"><a href="#help_feynman">Feynman</a></td>
+	<td width="10%"><a href="#feynman">Feynman</a></td>
         <td>
 
           <embed src="/images/feynman/00/04/SGDID:S0004310-443840.svg"
@@ -240,14 +240,14 @@
 <p><hr></p>
 
  <p>
- <a name="help_species">Species</a><br>
+ <a name="species">Species</a><br>
    The 'species' field tells just that.  Currently the only likely
    species one will see are <i>Saccharomyces cerevisiae</i>, <i>Homo
    sapiens</i>, and <i>Mus musculus</i>
  </p>
 
  <p>
- <a name="help_graph">Graph</a><br>
+ <a name="graph">Graph</a><br>
   Every sequence window of the PRFdb is randomized using one of a few
   potential randomization strategies (shuffling, maintain nucleotide
   frequencies, maintain dinucleotide frequencies, maintain reading
@@ -266,14 +266,14 @@
  </p>
 
  <p>
- <a name="#help_accession">Accession</a><br>
+ <a name="accession">Accession</a><br>
   The accession provides the genbank or SGD accession of the given
   gene.  Clicking on the accession itself will take you back to the
   gene view.
  </p>
 
  <p>
- <a name="help_position">Position</a><br>
+ <a name="position">Position</a><br>
   This number defines how many bases from the beginning of the mRNA
   the actual PRF signal may be found.  In order to get a sense of
   where this is in the gene, it may be most useful to follow the
@@ -282,14 +282,14 @@
  </p>
 
  <p>
- <a name="help_algorithm">Algorithm</a><br>
+ <a name="algorithm">Algorithm</a><br>
   The algorithm may be one of 'pknots,' 'nupack,' or 'hotknots.'
   These secondary structure prediction programs provide a putative
   mRNA structure as well as a putative minimum free energy.
  </p>
 
  <p>
- <a name="help_barcode">Barcode</a><br>
+ <a name="barcode">Barcode</a><br>
    The 'barcode' is a shorthand representation of the secondary
    structureo of a given sequence window.  A sequence consisting of a
    single stem would thus show up as '11' while an H-type pseudoknot
@@ -298,28 +298,28 @@
  </p>
 
  <p>
- <a name="help_seqlength">Sequence Length</a><br>
+ <a name="seqlength">Sequence Length</a><br>
   The sequence lenght is usally 100 bases.  However this is
   variable in <i>Saccharomyces cerevisiae</i> sequences.
  <p>
 
 
  <p>
- <a name="help_slipsite">Slipsite</a><br>
+ <a name="slipsite">Slipsite</a><br>
   There are 24 separate slippery heptamers which follow the motif
   NNNWWWH.  This field shows which heptamer is used by this sequence
   window.
  </p>
 
  <p>
- <a name="help_bp">Number of Base Pairs</a><br>
+ <a name="bp">Number of Base Pairs</a><br>
   This field provides the number of bases which are paired in the
   sequence.
  </p>
 
 
  <p>
- <a name="help_mfe">MFE</a><br>
+ <a name="mfe">MFE</a><br>
   The minimum free energy is calculated by summing the free energy
   change associated with a group of known base pair configurations
   including: stacking bases, GC/AU/GU base pairs, internal bulges,
@@ -331,7 +331,7 @@
  </p>
 
  <p>
- <a name="help_z">z score</a><br>
+ <a name="z">z score</a><br>
   The z score of a given sequence is calcuated as the difference
   between the mean mfe of the randomized sequences and the mfe of
   the given sequence divided by the standard deviation of the
@@ -340,7 +340,7 @@
  </p>
 
  <p>
- <a name="help_rand_mfe">Randomized MFE</a><br>
+ <a name="rand_mfe">Randomized MFE</a><br>
    This field shows the mean of the randomized mfe values.  The
    standard error is reported.  It is calculated as the standard
    deviation divided by the square root of the number of iterations.
@@ -350,7 +350,7 @@
  </p>
 
  <p>
- <a name="help_ppcc">PPCC</a><br>
+ <a name="ppcc">PPCC</a><br>
   PPCC stands for Probability Plot Correlation Coefficient.  This is
   calculated by taking the Correlation coefficient of an idealized
   normal distribution and the actual distribution provided by the
@@ -365,13 +365,13 @@
  </p>
 
  <p>
- <a name="help_seq">Sequence Window</a>
+ <a name="seq">Sequence Window</a>
   The actual sequence window folded.  You can download a fasta file of
   it to the right.
  </p>
 
  <p>
- <a name="help_parens">Parens</a>
+ <a name="parens">Parens</a>
   Some MFE prediction algorithms present a parenthesis output
   shorthand where '()' describes bases participating in stems and '{}'
   describes bases participating in stems which are a part of a
@@ -380,13 +380,13 @@
  </p>
 
  <p>
- <a name="help_parsed">Parsed</a>
+ <a name="parsed">Parsed</a>
   The 'parsed' output is a shorthand way to describe each stem.  Each
   base is either a '.' or number of a stem.
  </p>
 
  <p>
- <a name="help_feynman">Feynman</a>
+ <a name="feynman">Feynman</a>
   A feynman diagram of this secondary structure is generated for each
   sequence window.  It is possible to download the .bpseq
   format of the secondary structure beside this image.
