--- a/graphs.html
+++ b/graphs.html
@@ -36,12 +36,15 @@ Generating new extensions now.
  <img src="images/cloud/<% $species %>/extension-percent.png" usemap="#percent_extension">
  <img src="images/cloud/<% $species %>/extension-percent_orf.png">
 </center>
-Below is the same with the number of codons on the y axis.
+The red line is the total number of PRF motifs with respect to ORF position.
+The green is the percentage which are longer than 30 codons.<br>
+Below is the same with the number of codons on the y axis.<br>
 </p>
 <center>
   <img src="images/cloud/<% $species %>/extension-codons.png" usemap="#codons_extension">
   <img src="images/cloud/<% $species %>/extension-codons_extension.png">
 </center>
+
 
 %## Dump the percent map to STDOUT
 % open(PERCENT_MAP, "<$ENV{PRFDB_HOME}/images/cloud/$species/extension-percent.png.map");
