--- a/download/parsed.html
+++ b/download/parsed.html
@@ -1,16 +1,17 @@
-<%init>
+<%perl>
  $r->content_type('application/octet-stream');
  my $mt = "mfe_$species";
  my $stmt = qq"SELECT genome.comment, $mt.accession, $mt.parens, $mt.start FROM genome, $mt WHERE $mt.id = ? and $mt.genome_id=genome.id";
- my $seq = $db->MySelect(statement =>$stmt, vars =>[$mfeid], type =>'row');
+ my $seq = $db->MySelect(statement => $stmt, vars =>[$mfeid], type =>'row');
  my $filename = qq"$seq->[1]_$seq->[3].parens";
  $filename =~ s/SGDID://g;
  $r->headers_out->add('Content-disposition' => ("attachment; filename=$filename"));
  print "#$seq->[1] starting at $seq->[3]: $seq->[0]
 $seq->[2]
 ";
-</%init>
+</%perl>
+
 <%args>
  $mfeid => undef;
- species => "saccharomyces_cerevisiae";
+ $species => "saccharomyces_cerevisiae";
 </%args>
