--- a/distribution.html
+++ b/distribution.html
@@ -22,6 +22,17 @@
  </form>
 
 <br>
+
+<table width="1000" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td>
+%#      <center><img src="images/cloud/<% $species %>/cloud-<% $slipsites %>-<% $algorithms %>-<% $seqlength %>-mfe_dist.png"></center>
+    <div id="mfe" style="width:800px;height:200px;"></div>
+    </td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>
 % my $filename = qq"$ENV{PRFDB_HOME}/images/cloud/${species}/cloud-${slipsites}-${algorithms}-${seqlength}.png";
 % if ($cloud_filters =~ /pseudo/) {
 %  $filename = qq"$ENV{PRFDB_HOME}/images/cloud/${species}/cloud-pknot-${slipsites}-${algorithms}-${seqlength}.png";
@@ -35,6 +46,13 @@
 %   }
 % }
 % if (-f $filename) {
+    </td>
+    <td>
+%#      <img src="images/cloud/<% $species %>/cloud-<% $slipsites %>-<% $algorithms %>-<% $seqlength %>-z_dist.png">
+    <div id="z" style="width:200px;height:800px;"></div>
+    </td>
+  </tr>
+</table>
 
 </center>
 <br>
@@ -66,6 +84,46 @@ coordinates wihch share more than 1 sequence window.
 % while (my $line = <MAP>) { print  $line; }
 % close(MAP);
 
+
+% my $mfe_json_filename = qq"/images/cloud/$species/cloud-${slipsites}-${algorithms}-${seqlength}-mfe_dist.json";
+% my $z_json_filename = qq"/images/cloud/$species/cloud-${slipsites}-${algorithms}-${seqlength}-z_dist.json";
+
+<script type="text/javascript" id="mfe">
+
+$(function() {
+    var options = {
+	colors: [ "darkred", "darkgreen", "black", "darkblue" ],
+        series:
+	 { stack: 1,
+	   lines: { show:false },
+	   bars: { fill:1, lineWidth:0, show:true, barWidth:0.4 },
+	 },
+    };
+    
+    $.getJSON('<% $mfe_json_filename %>', function(series) {
+		  var dat =  series;
+		  $.plot($("#mfe"), dat, options);
+	      });
+  });
+</script>
+
+<script type="text/javascript" id="z">
+
+$(function() {
+    var options = {
+%#	series: { bars: { fillColor: "black" } },
+	lines: { show: false, steps: false },
+	bars: { fill:1.0, show: true, barWidth: 0.1, horizontal: true },
+	colors: [ "darkblue" ],
+    };
+    
+    $.getJSON('<% $z_json_filename %>', function(series) {
+		  var dat = [ series ];
+		  $.plot($("#z"), dat, options);
+	      });
+  });
+</script>
+
 % } else {
 <p>Generating a new distribution for <i><% HTMLMisc::Make_Species($species) %></i> now.<br>
 These graphs take about a minute to generate, this page will refresh with the freshly generated
@@ -74,8 +132,9 @@ graph in one minute.</p>
 <& /js/refresh.html, refresh_url=>"distribution.html?species=$species&algorithms=$algorithms&seqlength=$seqlength&slipsites=$slipsites", seconds => 30 &>
 <& generate_distribution.html, species => $species, slipsites => $slipsites, algorithms => $algorithms, seqlength => $seqlength &>
 %  }
-% }  ## If the parameters are not defined, print the html form to get them
-% else {
+
+%  ## If the parameters are not defined, print the html form to get them
+% } else {
 
 
 <tr align="left" valign="top">
